fix image overflow from grid container

--- a/src/assets/styles/MainPage.sass
+++ b/src/assets/styles/MainPage.sass
@@ -77,8 +77,6 @@
     margin: 0 auto    
     margin-bottom: 65px
     padding: 0 25px
-    @include plus1025()
-        padding: 0
 
 .categories-section-container
     padding-top: 25px
@@ -151,8 +149,8 @@
     height: 50px
     padding: 0px 16px
     background-color: rgba(#fff, 80%)
-    border-radius: 0 36px 0 15px
-    font-size: 20px
+    border-radius: 0 36px 0 0px
+    font-size: 16px
     color: #171717
     font-weight: 500
     display: flex
@@ -183,27 +181,50 @@ main
     display: grid
     grid-template-columns: 1fr
     grid-gap: 24px
+    width: 100%
     @include plus600()
-        max-height: 1300px
         grid-template-rows: repeat(3, 1fr)
+        grid-template-columns: repeat(2, 1fr)
+        height: 1300px
+    @include plus1025()
+        max-height: 1300px
+        grid-template-rows: repeat(7, 1fr)
         grid-template-columns: repeat(2, 1fr)
         grid-auto-flow: row
     .woman-and-kids-item
-        height: 100%
         width: 100%
+        height: 100%
+        position: relative
         img
-            height: 100%
             width: 100%
+            height: 100%
+            object-fit: cover
+            @include plus1025()
+                width: inherit
+                max-width: 100%
+                max-height: 100%
+                object-fit: cover
+                object-position: center top
         &:nth-child(1)
-            grid-row: span 1 
+            @include plus600()
+                grid-row: span 1
+            @include plus1025()
+                grid-row: span 3
         &:nth-child(2)
             @include plus600()
                 grid-row: span 2
+            @include plus1025()
+                grid-row: span 4
         &:nth-child(3)
             @include plus600()
                 grid-row: span 2
+            @include plus1025()
+                grid-row: span 4
         &:nth-child(4)
-            grid-row: span 1
+            @include plus600()
+                grid-row: span 1
+            @include plus1025()
+                grid-row: span 3
         
 
 .special-clothing-title
